<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation_menu_week"
    app:startDestination="@id/fragmentStart">

    <fragment
        android:id="@+id/fragmentStart"
        android:name="com.example.menuweek.FragmentStart"
        android:label="@string/star_order_heb"
        tools:layout="@layout/fragment_start">
        <action
            android:id="@+id/action_fragmentStart_to_fragmentPlate"
            app:destination="@id/fragmentPlate" />
    </fragment>
    <fragment
        android:id="@+id/fragmentPlate"
        android:name="com.example.menuweek.FragmentPlate"
        android:label="@string/plate_principal"
        tools:layout="@layout/fragment_plate">
        <action
            android:id="@+id/action_fragmentPlate_to_fragmentStart"
            app:destination="@id/fragmentStart" />
        <action
            android:id="@+id/action_fragmentPlate_to_fragmentAccompaniment"
            app:destination="@id/fragmentAccompaniment" />
    </fragment>
    <fragment
        android:id="@+id/fragmentSideDish"
        android:name="com.example.menuweek.FragmentSideDish"
        android:label="@string/plate_side_dish"
        tools:layout="@layout/fragment_side_dish">
        <action
            android:id="@+id/action_fragmentSideDish_to_fragmentStart"
            app:destination="@id/fragmentStart" />
        <action
            android:id="@+id/action_fragmentSideDish_to_fragmentDesert"
            app:destination="@id/fragmentDesert" />
    </fragment>
    <fragment
        android:id="@+id/fragmentAccompaniment"
        android:name="com.example.menuweek.FragmentAccompaniment"
        android:label="@string/plate_acompaniament"
        tools:layout="@layout/fragment_accompaniment">
        <action
            android:id="@+id/action_fragmentAccompaniment_to_fragmentStart"
            app:destination="@id/fragmentStart" />
        <action
            android:id="@+id/action_fragmentAccompaniment_to_fragmentSideDish"
            app:destination="@id/fragmentSideDish" />
    </fragment>

    <fragment
        android:id="@+id/fragmentDesert"
        android:name="com.example.menuweek.FragmentDesert"
        android:label="@string/plate_desert"
        tools:layout="@layout/fragment_desert">
        <action
            android:id="@+id/action_fragmentDesert_to_fragmentSummary"
            app:destination="@id/fragmentSummary" />
        <action
            android:id="@+id/action_fragmentDesert_to_fragmentStart"
            app:destination="@id/fragmentStart" />
    </fragment>
    <fragment
        android:id="@+id/fragmentSummary"
        android:name="com.example.menuweek.FragmentSummary"
        android:label="@string/summary_order">
        <action
            android:id="@+id/action_fragmentSummary_to_fragmentStart"
            app:destination="@id/fragmentStart" />
    </fragment>

</navigation>