<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="order"
            type="com.example.menuweek.viewModel.ViewModelSelectedOrder" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#59C151"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/summary"
            android:textDirection="rtl"
            android:textSize="22sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@{order.getPrice(order.selectedPlate)}" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{@string/plate_principal_detail(order.selectedPlate.namePlate)}" />



        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@{order.getPrice(order.selectedSideDish)}" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{@string/plate_side_dish_detail(order.selectedSideDish.namePlate)}" />
            <!--    android:text="@{order.selectedSideDish.namePlate}" />-->



        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@{order.getPrice(order.selectedAcompaniament)}" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{@string/plate_acompaniament_detail(order.selectedAcompaniament.namePlate)}" />
            <!-- android:text="@{order.selectedAcompaniament.namePlate}" />-->



     </LinearLayout>

     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
         android:orientation="horizontal">
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="@{order.getPrice(order.selectedDesert)}" />
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@{@string/plate_desert_detail(order.selectedDesert.namePlate)}" />
            <!-- android:text="@{order.selectedDesert.namePlate}" />-->

     </LinearLayout>

     <View
         android:layout_width="match_parent"
         android:layout_height="5dp"
         style="@style/Widget.Material3.MaterialDivider"
         android:background="#23810D" />
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="5dp"
         android:orientation="horizontal">
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="left"
             android:layout_marginLeft="10dp"
             android:layout_marginTop="10dp"
             android:layout_marginRight="10dp"
             android:text="@{order.subtotal}" />

         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="סך הכל: " />

     </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
         android:orientation="horizontal">
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="left"
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
             android:text="@{order.tax}" />

         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="מעמ: " />

     </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="5dp"
         android:orientation="horizontal">
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="left"
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
             android:text="@{order.total}"
             android:textSize="20sp" />

         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="סבום כולל: " />

     </LinearLayout>




     <Button
         android:id="@+id/submit_order"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         style="@style/Widget.Material3.Button"
         android:layout_margin="5dp"
         android:textSize="18sp"
         android:text="@string/send_order" />

     <Button
         android:id="@+id/cancel"
         style="@style/Widget.Material3.Button.OutlinedButton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="5dp"
         android:textSize="18sp"
         android:text="@string/cancel" />
 </LinearLayout>
</layout>